<resources>
    <string name="facebook_app_id">1750199605287499</string>
    <string name="fb_login_protocol_scheme">fb1750199605287499</string>
    <string name="yt_api_key">AIzaSyDbpMioiHvdMHmA41UETZy6sCO1txortVc</string>

    <string name="app_name">Gyan Se Pehchan</string>
    <string name="lblGSP">GSP</string>
    <string name="lblPresents">Presence</string>
    <string name="lblPoweredBy">Powered by</string>
    <string name="txtPoweredBy">www.klipinterest.com</string>
    <string name="lblAllen">ALLEN</string>
    <string name="txtFB">Login with Facebook</string>
    <string name="txtGG">Sign in with Google</string>
    <string name="txtPlay">Play Quiz</string>
    <string name="lblProfile">Profile</string>
    <string name="lblEarnCoins">Earn Coins</string>
    <string name="lblNotification">Notification</string>
    <string name="lblMoreContests">More Contests</string>
    <string name="lblSetting">Setting</string>
    <string name="lblLeaderboard">Leaderboard</string>
    <string name="lblVideos">Videos</string>
    <string name="lblBack">Back</string>
    <string name="lblWonGames">Won Games</string>
    <string name="lblTotalCoins">Total Coins</string>
    <string name="lblAvatar">Avatar</string>
    <string name="lblWin">Win</string>
    <string name="lblLose">Lose</string>
    <string name="lblStatistics">Statistics (Last 30 days)</string>
    <string name="lblTopics">Topics</string>
    <string name="lblEdit">Edit</string>
    <string name="lblShare">Share</string>
    <string name="lblUpdateMobile">Update mobile no.</string>
    <string name="lblUpdateLocation">Where are you from</string>
    <string name="lblUpdateQuote">Express Yourself</string>
    <string name="lblCancel">Cancel</string>
    <string name="lblSave">Save</string>
    <string name="txt5">5</string>
    <string name="lblRedeem">Redeem</string>
    <string name="lblDay1">Day 1</string>
    <string name="txt7">7</string>
    <string name="lblDay2">Day 2</string>
    <string name="txt10">10</string>
    <string name="lblDay3">Day 3</string>
    <string name="lblDay4">Day 4</string>
    <string name="txt12">12</string>
    <string name="lblDay5">Day 5</string>
    <string name="txt15">15</string>
    <string name="txt17">17</string>
    <string name="lblDay6">Day 6</string>
    <string name="lblDay7">Day 7</string>
    <string name="txt20">20</string>
    <string name="lblCheckin">Check In</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="lblTopPlayers">Top Players</string>
    <string name="lblUsername">Username</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="lblPrizes">Prizes</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="lblComment">Comment</string>
    <string name="lblScore">Score</string>
    <string name="lblLevel2">Level 2</string>
    <string name="lblLevel1">Level 1</string>
    <string name="lblLevel3">Level 3</string>
    <string name="lblQuizPoints">Quiz Points</string>
    <string name="lblShuffle">Shuffle</string>
    <string name="lblQuit">Quit</string>
    <string name="lblTrue">True</string>
    <string name="lblFalse">False</string>
    <string name="lblExit">Exit</string>
    <string name="lblRestart">Play Again</string>
    <string name="lblLogout">Logout</string>
    <string name="lblTotalGames">Total Games</string>
    <string name="lblVerify">Verify</string>
    <string name="submit">Submit</string>
    <string name="prompt_code">Enter OTP</string>
    <string name="lblInvite">Invite</string>
    <string name="lblInstructions">Instructions</string>
    <string name="dialogTitle">Dialog Title</string>
    <string name="lblNo">No</string>
    <string name="lblYes">Yes</string>
    <string name="dialogMessage">Dialog Message</string>
    <string name="lblClose">Close</string>
    <string name="lblOk">Ok</string>
    <string name="lblTranslate">Translate</string>
    <string name="lblQuestionTable">Q. Table</string>
    <string name="txt0">0</string>
    <string name="lblRewards">Rewards</string>
    <string name="full">Full</string>
    <string name="infinity">&#8734;</string>
    <string name="lblTotalQuiz">Total Quiz</string>
    <string name="lblTotalXP">Total XP</string>
    <string name="default_notification_channel_id">GSP_Notification_Channel</string>
    <string name="info_processing">Processing</string>
    <string name="action_update">Update</string>
    <string name="info_failed">Failed</string>
    <string name="info_pending">Pending</string>
    <string name="info_canceled">Canceled</string>
    <string name="info_downloading">Downloading</string>
    <string name="info_installing">Installing</string>
    <string name="info_installed">Installed</string>
    <string name="info_restart">Restart</string>
    <string name="update_available">New version available.</string>
    <string name="update_title">App Update</string>
    <string name="update_message">Application successfully updated, you need to restart the app.</string>
    <string name="action_restart">Restart</string>
    <string name="toast_updated">Updated</string>
    <string name="toast_started">Started</string>
    <string name="toast_cancelled">Canceled</string>
    <string name="toast_failed">Failed</string>
    <string name="info_downloaded">Downloaded</string>
</resources>