<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_gray"
        android:padding="@dimen/margin16">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialogTitle"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/msg"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/dialogMessage"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_marginTop="@dimen/margin8"/>

        <Button
            android:id="@+id/btnNo"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin16"
            android:background="@drawable/bg_btn_black"
            android:text="@string/lblNo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btnYes"
            app:layout_constraintTop_toBottomOf="@id/msg"
            android:layout_marginEnd="@dimen/margin8"
            />

        <Button
            android:id="@+id/btnYes"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/bg_btn_blue"
            android:text="@string/lblYes"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/btnNo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/btnNo"
            app:layout_constraintBottom_toBottomOf="@id/btnNo"
            android:layout_marginStart="@dimen/margin8"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>