<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutCheckin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin16"
    android:layout_marginRight="@dimen/margin16"
    android:background="@drawable/bg_btn_gray"
    android:padding="@dimen/margin8">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        app:layout_constraintEnd_toStartOf="@id/layoutDay2"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgDay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay1"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:enabled="false"
            android:gravity="center"
            android:text="@string/txt5"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay1"
            app:layout_constraintEnd_toEndOf="@id/imgDay1"
            app:layout_constraintStart_toStartOf="@id/imgDay1"
            app:layout_constraintTop_toTopOf="@id/imgDay1" />

        <TextView
            android:id="@+id/lblDay1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay1"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay1"
            app:layout_constraintStart_toStartOf="@id/textDay1"
            app:layout_constraintTop_toBottomOf="@id/textDay1" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        app:layout_constraintEnd_toStartOf="@id/layoutDay3"
        app:layout_constraintStart_toEndOf="@id/layoutDay1"
        app:layout_constraintTop_toTopOf="@id/layoutDay1">

        <ImageView
            android:id="@+id/imgDay2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay2"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt7"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay2"
            app:layout_constraintEnd_toEndOf="@id/imgDay2"
            app:layout_constraintStart_toStartOf="@id/imgDay2"
            app:layout_constraintTop_toTopOf="@id/imgDay2" />

        <TextView
            android:id="@+id/lblDay2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay2"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay2"
            app:layout_constraintStart_toStartOf="@id/textDay2"
            app:layout_constraintTop_toBottomOf="@id/textDay2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layoutDay4"
        app:layout_constraintStart_toEndOf="@id/layoutDay2"
        app:layout_constraintTop_toTopOf="@id/layoutDay2">

        <ImageView
            android:id="@+id/imgDay3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay3"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt10"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay3"
            app:layout_constraintEnd_toEndOf="@id/imgDay3"
            app:layout_constraintStart_toStartOf="@id/imgDay3"
            app:layout_constraintTop_toTopOf="@id/imgDay3" />

        <TextView
            android:id="@+id/lblDay3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay3"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay3"
            app:layout_constraintStart_toStartOf="@id/textDay3"
            app:layout_constraintTop_toBottomOf="@id/textDay3" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layoutDay5"
        app:layout_constraintStart_toEndOf="@id/layoutDay3"
        app:layout_constraintTop_toTopOf="@id/layoutDay3">

        <ImageView
            android:id="@+id/imgDay4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay5"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt12"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay4"
            app:layout_constraintEnd_toEndOf="@id/imgDay4"
            app:layout_constraintStart_toStartOf="@id/imgDay4"
            app:layout_constraintTop_toTopOf="@id/imgDay4" />

        <TextView
            android:id="@+id/lblDay4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay4"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay4"
            app:layout_constraintStart_toStartOf="@id/textDay4"
            app:layout_constraintTop_toBottomOf="@id/textDay4" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layoutDay6"
        app:layout_constraintStart_toEndOf="@id/layoutDay4"
        app:layout_constraintTop_toTopOf="@id/layoutDay4">

        <ImageView
            android:id="@+id/imgDay5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay5"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay5"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt15"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay5"
            app:layout_constraintEnd_toEndOf="@id/imgDay5"
            app:layout_constraintStart_toStartOf="@id/imgDay5"
            app:layout_constraintTop_toTopOf="@id/imgDay5" />

        <TextView
            android:id="@+id/lblDay5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay5"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay5"
            app:layout_constraintStart_toStartOf="@id/textDay5"
            app:layout_constraintTop_toBottomOf="@id/textDay5" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin8"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/layoutDay7"
        app:layout_constraintStart_toEndOf="@id/layoutDay5"
        app:layout_constraintTop_toTopOf="@id/layoutDay5">

        <ImageView
            android:id="@+id/imgDay6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay6"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay6"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt17"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay6"
            app:layout_constraintEnd_toEndOf="@id/imgDay6"
            app:layout_constraintStart_toStartOf="@id/imgDay6"
            app:layout_constraintTop_toTopOf="@id/imgDay6" />

        <TextView
            android:id="@+id/lblDay6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay6"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay6"
            app:layout_constraintStart_toStartOf="@id/textDay6"
            app:layout_constraintTop_toBottomOf="@id/textDay6" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutDay7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/layoutDay6"
        app:layout_constraintTop_toTopOf="@id/layoutDay6">

        <ImageView
            android:id="@+id/imgDay7"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/lblDay7"
            android:src="@drawable/bg_circle_orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textDay7"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:gravity="center"
            android:text="@string/txt20"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/imgDay7"
            app:layout_constraintEnd_toEndOf="@id/imgDay7"
            app:layout_constraintStart_toStartOf="@id/imgDay7"
            app:layout_constraintTop_toTopOf="@id/imgDay7" />

        <TextView
            android:id="@+id/lblDay7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/lblDay7"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@id/textDay7"
            app:layout_constraintStart_toStartOf="@id/textDay7"
            app:layout_constraintTop_toBottomOf="@id/textDay7" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/btnCheckin"
        android:layout_width="0dp"
        android:layout_height="36dp"
        android:layout_marginTop="@dimen/margin16"
        android:background="@drawable/bg_btn_blue"
        android:onClick="btnActionReward"
        android:text="@string/lblCheckin"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/layoutDay7"
        app:layout_constraintStart_toStartOf="@id/layoutDay1"
        app:layout_constraintTop_toBottomOf="@id/layoutDay1" />

</androidx.constraintlayout.widget.ConstraintLayout>