<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@null"
    app:elevation="0dp">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/myToolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_collapseMode="pin">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:id="@+id/allen"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/lblAllen"
                android:scaleType="centerInside"
                android:src="@drawable/allen"
                app:tint="@color/allenBlue"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/btnClose"
                app:layout_constraintBottom_toBottomOf="@id/btnClose"
                app:layout_constraintHeight_max="36dp"/>

            <ImageButton
                android:id="@+id/menuNotification"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:adjustViewBounds="true"
                android:background="@drawable/solid_blue_radius"
                android:contentDescription="@string/lblNotification"
                android:scaleType="centerInside"
                android:src="@drawable/ic_notification"
                app:layout_constraintEnd_toStartOf="@id/btnClose"
                app:layout_constraintTop_toTopOf="@id/btnClose"
                android:layout_marginEnd="@dimen/margin8"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/msgCounter"
                android:layout_width="18dp"
                android:layout_height="18dp"
                android:adjustViewBounds="true"
                app:layout_constraintStart_toStartOf="@id/menuNotification"
                app:layout_constraintBottom_toBottomOf="@id/menuNotification"
                android:layout_marginStart="@dimen/margin20"
                android:layout_marginBottom="@dimen/margin20"
                android:background="@drawable/bg_circle_black"
                android:text="!"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="8sp"
                android:gravity="center"
                android:visibility="gone"/>

            <ImageButton
                android:id="@+id/btnClose"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:adjustViewBounds="true"
                android:background="@drawable/solid_grey_radius"
                android:contentDescription="@string/lblClose"
                android:scaleType="centerInside"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginEnd="@dimen/margin16"
                android:layout_marginTop="@dimen/margin8"
                app:tint="@color/white" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>
</com.google.android.material.appbar.AppBarLayout>